--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             gap: 15px;
         }
 
-        .check-card h2 { margin: 0; font-size: 24px; color: var(--fts-red); }
+        .check-card h2 { margin: 0; font-size: 24px; color: var(--fts-red); text-transform: capitalize; }
         .check-card p { margin: 0; color: #666; font-size: 16px; line-height: 1.5; }
 
         .btn {
@@ -107,8 +107,8 @@
     <div class="container">
         <div class="check-card">
             <div class="status-badge">DVSA COMPLIANT</div>
-            <h2>Daily Walkaround</h2>
-            <p>Please complete your vehicle safety check before starting your shift.</p>
+            <h2>Daily Vehicle Check</h2>
+            <p>Please complete your vehicle safety check before starting your journey.</p>
             <a href="https://forms.gle/f8FUy2U54c5Eof5TA" class="btn">Start Check</a>
         </div>
     </div>
