--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
             margin: 0; font-family: -apple-system, BlinkMacSystemFont, sans-serif; 
             background: var(--bg-color); color: var(--text-color);
             display: flex; flex-direction: column; align-items: center; 
-            justify-content: center; min-height: 100vh;
-            padding: 20px;
+            /* Lifted the content by using flex-start and adding padding */
+            justify-content: flex-start; 
+            min-height: 100vh;
+            padding: 60px 20px; 
         }
 
         /* --- SIDEBAR --- */
@@ -42,7 +44,7 @@
         /* --- LOGO --- */
         .logo { 
             max-width: 250px; 
-            margin-bottom: 40px; 
+            margin-bottom: 30px; 
         }
 
         /* --- ACTION CARD --- */
