--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         <div class="check-card">
             <div class="status-badge">DVSA COMPLIANT</div>
             <h2 style="margin:0; color:#E62411;">Daily Vehicle Check</h2>
-            <p style="color:#666;">Safety check required before journey.</p>
+            <p style="color:#666;">Please ensure you do your daily vehicle checks before starting your journey.</p>
             <a href="https://forms.gle/f8FUy2U54c5Eof5TA" class="btn">Start Check</a>
         </div>
 
@@ -149,3 +149,4 @@
 
 </body>
 </html>
+
