--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             const pass = document.getElementById('password').value;
             
             // SET YOUR USERNAME AND PASSWORD HERE
-            if (user.toLowerCase() === "Chris" && pass === "Frost1") {
+            if (user.toLowerCase() === "frost" && pass === "Haulage2026") {
                 document.getElementById('loginOverlay').style.display = "none";
                 document.getElementById('appContent').style.display = "flex";
                 document.getElementById('appContent').style.flexDirection = "column";
