--- a/index.html
+++ b/index.html
@@ -74,11 +74,11 @@
         const validUsers = {
             "frost": "Haulage2026", "richard": "Frost2026", "david": "Fleet2026", "office": "Admin2026",
             "andy carter": "ac26", "andy west": "aw26", "barrie ashmore": "ba26", "callum lee": "ca26",
-            "dean young": "dy26", "ian bason": "ib26", "jan zackl": "jz26", "john hulbert": "jh26",
+            "dean young": "dy26", "ian bason": "ib26", "jan zackl": "jz26", "jon hulbert": "jh26",
             "josh harrison": "jh26", "lee woodcock": "lw26", "marc wickham": "mw26", "michael moss": "mm26",
             "neil woods": "nw26", "rhys hill": "rh26", "ricardo morais": "rm26", "richard dickens": "rd26",
             "richard robinson": "rr26", "richard spence": "rs26", "roy taylor": "rt26", "stuart sleigh": "ss26",
-            "thomas broomhead": "tb26", "marco chung": "mc26"
+            "thomas broomhead": "tb26", "marco chung": "mc26", "chris frost": "cf26"
         };
 
         window.onload = function() {
@@ -123,3 +123,4 @@
     </script>
 </body>
 </html>
+
