--- a/index.html
+++ b/index.html
@@ -70,12 +70,6 @@
                 <h2 style="margin:0; color:#333; font-size: 20px;">FTS Trailer Selection</h2>
                 <a href="#" id="trailerLink" class="btn" style="background:#555;">Log Trailer</a>
             </div>
-
-            <div class="check-card" style="border-top-color: #333;">
-                <div class="status-badge">PAYROLL</div>
-                <h2 style="margin:0; color:#333; font-size: 20px;">Driver Timesheet</h2>
-                <a href="#" id="timesheetLink" class="btn" style="background:#333;">Log Hours</a>
-            </div>
         </div>
     </div>
 
@@ -93,7 +87,7 @@
         window.onload = function() {
             const savedUser = localStorage.getItem("frostUserName");
             if (localStorage.getItem("frostLoggedIn") === "true" && savedUser) {
-                requestLocationAndShow(savedUser);
+                showDashboard(savedUser);
             }
         };
 
@@ -103,44 +97,22 @@
             if (validUsers[user] && validUsers[user] === pass) {
                 localStorage.setItem("frostLoggedIn", "true");
                 localStorage.setItem("frostUserName", user);
-                requestLocationAndShow(user);
+                showDashboard(user);
             } else {
                 document.getElementById('errorMsg').style.display = "block";
             }
         }
 
-        function requestLocationAndShow(name) {
-            if (navigator.geolocation) {
-                navigator.geolocation.getCurrentPosition(
-                    (position) => {
-                        const loc = position.coords.latitude + "," + position.coords.longitude;
-                        showDashboard(name, loc);
-                    },
-                    () => { showDashboard(name, "Location Denied"); },
-                    { enableHighAccuracy: true, timeout: 5000 }
-                );
-            } else {
-                showDashboard(name, "Not Supported");
-            }
-        }
-
-        function showDashboard(name, loc) {
+        function showDashboard(name) {
             document.getElementById('loginOverlay').style.display = "none";
             document.getElementById('appContent').style.display = "flex";
             document.getElementById('appContent').style.flexDirection = "column";
             document.getElementById('appContent').style.alignItems = "center";
             document.getElementById('welcomeUser').innerText = "Welcome, " + name;
 
-            // Trailer Link
+            // Trailer Link with Name Pre-fill
             const trailerUrl = "https://docs.google.com/forms/d/1aMGoArb0Vp2lZX3m6gKQnYAplr6B8oDfdrGqDMJDz-A/viewform";
             document.getElementById('trailerLink').href = trailerUrl + "?entry.2036897075=" + encodeURIComponent(name);
-            
-            // Timesheet Link with Name & Location
-            const sheetUrl = "https://docs.google.com/forms/d/e/1FAIpQLSd_Ke11hqTTCzr9vdLfJCqitmRejct-sn2MQxtqhvi7B5xa0g/viewform";
-            const nameID = "entry.717090179";
-            const locID = "entry.1431143784";
-            
-            document.getElementById('timesheetLink').href = `${sheetUrl}?usp=pp_url&${nameID}=${encodeURIComponent(name)}&${locID}=${encodeURIComponent(loc)}`;
         }
 
         function logout() { localStorage.clear(); location.reload(); }
