--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <div class="check-card">
                 <div class="status-badge">DVSA COMPLIANT</div>
                 <h2 style="margin:0; color:#E62411; font-size: 20px;">Daily Vehicle Check</h2>
-                <a href="https://forms.gle/f8FUy2U54c5Eof5TA" class="btn">Start Check</a>
+                <a href="#" id="dailyCheckLink" class="btn">Start Check</a>
             </div>
 
             <div class="check-card" style="border-top-color: #555;">
@@ -76,12 +76,13 @@
     <script>
         const validUsers = {
             "frost": "Haulage2026", "richard": "Frost2026", "david": "Fleet2026", "office": "Admin2026",
+            "chris frost": "cf26", "agency1": "agency",
             "andy carter": "ac26", "andy west": "aw26", "barrie ashmore": "ba26", "callum lee": "ca26",
-            "dean young": "dy26", "ian bason": "ib26", "jan zackl": "jz26", "jon hulbert": "jh26",
+            "dean young": "dy26", "ian bason": "ib26", "jan zackl": "jz26", "john hulbert": "jh26",
             "josh harrison": "jh26", "lee woodcock": "lw26", "marc wickham": "mw26", "michael moss": "mm26",
             "neil woods": "nw26", "rhys hill": "rh26", "ricardo morais": "rm26", "richard dickens": "rd26",
             "richard robinson": "rr26", "richard spence": "rs26", "roy taylor": "rt26", "stuart sleigh": "ss26",
-            "thomas broomhead": "tb26", "marco chung": "mc26", "chris frost": "cf26"
+            "thomas broomhead": "tb26", "marco chung": "mc26"
         };
 
         window.onload = function() {
@@ -94,7 +95,9 @@
         function checkLogin() {
             const user = document.getElementById('username').value.toLowerCase().trim();
             const pass = document.getElementById('password').value.trim();
-            if (validUsers[user] && validUsers[user] === pass) {
+            
+            // Check password exactly as entered, OR all lowercase (for mobile ease)
+            if (validUsers[user] && (validUsers[user] === pass || validUsers[user] === pass.toLowerCase())) {
                 localStorage.setItem("frostLoggedIn", "true");
                 localStorage.setItem("frostUserName", user);
                 showDashboard(user);
@@ -110,7 +113,9 @@
             document.getElementById('appContent').style.alignItems = "center";
             document.getElementById('welcomeUser').innerText = "Welcome, " + name;
 
-            // Trailer Link with Name Pre-fill
+            const dailyUrl = "https://docs.google.com/forms/d/e/1FAIpQLSemhiTzJ-hzYzn0TTzPZf1436oZ3MZZUzWl7UQxdLwxyRkZ7w/viewform";
+            document.getElementById('dailyCheckLink').href = dailyUrl + "?usp=pp_url&entry.585693254=" + encodeURIComponent(name);
+
             const trailerUrl = "https://docs.google.com/forms/d/1aMGoArb0Vp2lZX3m6gKQnYAplr6B8oDfdrGqDMJDz-A/viewform";
             document.getElementById('trailerLink').href = trailerUrl + "?entry.2036897075=" + encodeURIComponent(name);
         }
@@ -121,4 +126,3 @@
     </script>
 </body>
 </html>
-
