--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
             "rhys hill": { pass: "rh26", email: "r.hill1fts@gmail.com" },
             "ricardo morais": { pass: "rm26", email: "" },
             "richard dickens": { pass: "rd26", email: "" },
-            "richard robinson": { pass: "rr26", email: "" },
+            "richard robinson": { pass: "rr26", email: "robinson01623@gmail.com" },
             "richard spence": { pass: "rs26", email: "r.spence1fts@gmail.com" },
             "roy taylor": { pass: "rt26", email: "r.taylor1fts@gmail.com" },
             "stuart sleigh": { pass: "ss26", email: "s.sleigh1fts@gmail.com" },
@@ -278,3 +278,4 @@
     </script>
 </body>
 </html>
+
