--- a/index.html
+++ b/index.html
@@ -137,9 +137,11 @@
     </div>
 
     <script>
-        const MY_GOOGLE_SCRIPT_URL = "https://script.google.com/macros/s/AKfycbwpDm34e7T3hlNxg5sJR9flyafBz377GTBjj_NHr7dIauovQXywZxk4VJDvx8Q7zhlAbw/exec";
+        const MY_GOOGLE_SCRIPT_URL = "https://script.google.com/macros/s/AKfycbxybU7vcnxt6K7HOsCUzdFxj6vZKQpGXK-FeLWb8aG-jDQS4H8Nh8R6qJiKlI3L2QSqpw/exec";
 
         const validUsers = {
+            "frost": { pass: "Haulage2026", email: "richard@frosthaulage.co.uk" },
+            "richard": { pass: "Frost2026", email: "richard@frosthaulage.co.uk" },
             "andy west": { pass: "aw26", email: "a.west1fts@gmail.com" },
             "callum lee": { pass: "ca26", email: "c.lee1fts@gmail.com" },
             "ian bason": { pass: "ib26", email: "i.bason1fts@gmail.com" },
