--- a/index.html
+++ b/index.html
@@ -37,7 +37,6 @@
         /* SIDE MENU */
         #sideMenu { height: 100%; width: 0; position: fixed; z-index: 9999; top: 0; left: 0; background-color: var(--fts-red); overflow-x: hidden; transition: 0.3s; padding-top: 80px; }
         #sideMenu a, .menu-item { padding: 12px 20px; text-decoration: none; font-size: 15px; color: white !important; display: block; font-weight: 600; border-bottom: 1px solid rgba(255,255,255,0.1); }
-        .gate-code { background: rgba(0,0,0,0.2); color: #fff; font-size: 17px; letter-spacing: 1px; }
         .menu-label { color: rgba(255,255,255,0.6); font-size: 11px; padding: 15px 20px 5px; text-transform: uppercase; }
 
         .logo { max-width: 160px; margin: 10px 0 20px 0; }
@@ -78,10 +77,7 @@
             <div class="ticker">
                 <div class="ticker__item">FROST HAULAGE: DRIVE SAFE & STAY COMPLIANT</div>
                 <div class="ticker__item">YARD UPDATE: GATE CODE 3684</div>
-                <div class="ticker__item">THIS WEEKS FUEL CARD IS ROUTEX BP</div>
-                <div class="ticker__item">FROST HAULAGE: DRIVE SAFE & STAY COMPLIANT</div>
-                <div class="ticker__item">YARD UPDATE: GATE CODE 3684</div>
-                <div class="ticker__item">THIS WEEKS FUEL CARD IS ROUTEX BP</div>
+                <div class="ticker__item">THIS WEEKS FUEL CARD IS BP ROUTEX</div>
             </div>
         </div>
 
@@ -89,12 +85,7 @@
         
         <div id="sideMenu">
             <div class="menu-label">Security</div>
-            <div class="menu-item gate-code">Gate Code: <b>3684</b></div>
-            <div class="menu-label">Driver Tools</div>
-            <a href="https://snapacc.com/map/" target="_blank">Secure Parking (SNAP)</a>
-            <div class="menu-label">Support</div>
-            <a href="tel:07701238561">David Jayes</a>
-            <a href="tel:01949480130">Office</a>
+            <div class="menu-item">Gate Code: <b>3684</b></div>
             <div class="menu-label">Account</div>
             <a onclick="logout()" style="color: #ffcccc !important; cursor:pointer;">Log Out</a>
             <div onclick="closeNav()" style="padding: 20px; color: white; cursor: pointer; text-align: center;">✕ Close Menu</div>
@@ -116,14 +107,12 @@
             <div class="check-card">
                 <div class="status-badge">DVSA COMPLIANCE</div>
                 <h2 class="card-title">Daily Vehicle Check</h2>
-                <p class="card-subtitle">Complete your daily vehicle check before driving</p>
                 <a href="#" id="dailyCheckLink" class="btn btn-red">Start checks</a>
             </div>
 
             <div class="check-card" style="border-top-color: var(--fts-dark);">
                 <div class="status-badge">FLEET OPERATIONS</div>
                 <h2 class="card-title">Daily trailer checks.</h2>
-                <p class="card-subtitle">Trailer checks should be carried out each time you change trailers</p>
                 <a href="#" id="trailerLink" class="btn">Start checks</a>
             </div>
 
@@ -136,7 +125,7 @@
     </div>
 
     <script>
-        const MY_GOOGLE_SCRIPT_URL = "https://script.google.com/macros/s/AKfycby_c7uThwtTR04sBZDL3UYS0JJEcd9Yqva5ugQp8TJJXWf4GxseLEkT12O8gXPNS96-/exec";
+        const MY_GOOGLE_SCRIPT_URL = "https://script.google.com/macros/s/AKfycbzT5QOBo4RbEUOBnF2TxR0ptU12zEgSlGiefX46McGVxo7y_l55Y6X8IqpoZOeplCKtyg/exec";
 
         const validUsers = {
             "frost": { pass: "Haulage2026", email: "richard@frosthaulage.co.uk" },
