--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@
         <div class="ticker-wrap"><div class="ticker">
             <div class="ticker__item">FROST HAULAGE: DRIVE SAFE & STAY COMPLIANT</div>
             <div class="ticker__item">YARD UPDATE: GATE CODE 3684</div>
-            <div class="ticker__item">FUEL CARD: BP ROUTEX</div>
+            <div class="ticker__item">FUEL CARD: FUEL WISE</div>
             <div class="ticker__item">OFFICE: 01949 480130</div>
             <div class="ticker__item">FROST HAULAGE: DRIVE SAFE & STAY COMPLIANT</div>
             <div class="ticker__item">YARD UPDATE: GATE CODE 3684</div>
-            <div class="ticker__item">FUEL CARD: BP ROUTEX</div>
+            <div class="ticker__item">FUEL CARD: FUEL WISE</div>
             <div class="ticker__item">OFFICE: 01949 480130</div>
         </div></div>
         <header><div id="menuBtn" onclick="openNav()">☰</div></header>
@@ -170,3 +170,4 @@
     </script>
 </body>
 </html>
+
